/iTrade/ChangeLog
===============================================================================

On the road for v0.4.5 (Nausicaa)

===============================================================================

2006-11-19  Gilles Dumortier <dgil at ieee.org>
	* Yahoo connector was buggy (missing some data from one full year)
	* Package : SVN revision number (SF bug 1599315)
	* switch to yahoo connector to import euronext historic data
	* data/yahoo_tickers.txt to map some symbols between euronext and yahoo

2006-11-18  Gilles Dumortier <dgil at ieee.org>
	* add an experimental commande line --unicode to start with unicode
	  version of wxPython
	* Graph View : minor issues on display
	* Graph view : date display is garbage (SF bug 1598697)

2006-11-17  Gilles Dumortier <dgil at ieee.org>
	* Partially implement Graph : longer periods (SF bug 1598302)
	* Graph view implementation is better and more stable - we have a
	  better back-end to continue developments on the graphic toolbox !
	* Switch to numpy.array representation (SF bug 1597190)

2006-11-15  Gilles Dumortier <dgil at ieee.org>
	* Missing some Over picture text (SF bug 1595163)
	* Euronext Brussels Market : value error (SF bug 1596477)

2006-11-12  Gilles Dumortier <dgil at ieee.org>
	* Add a value: can't select it by isin and ticker (SF bug 1591336) in
	  lowercase
	* Add new menu in toolbar --> Options (SF bug 1594194)

2006-11-11  Gilles Dumortier <dgil at ieee.org>
	* Portfolio management : not all trades values (SF bug 1594183)
	* Nyse Market : error with special tickers (SF bug 1593243)
	* Amex/Nyse Markets : Invalid literal for float():N/A (SF bug 1594249)

2006-11-09  Gilles Dumortier <dgil at ieee.org>
	* Nyse Market : error with special tickers (SF bug 1593243)

2006-11-08  Gilles Dumortier <dgil at ieee.org>
	* Start working on the Graphic Tools ...
	* valueError Brussels Libre Market (SF bug 1592266)
	* Select/List Quote : invalid icon (SF bug 1592758)